--- a/JTB_ms/JTB_ms.Rmd
+++ b/JTB_ms/JTB_ms.Rmd
@@ -48,16 +48,16 @@ While the formal DEB model of @Muller:2009io represents the most significant the
 
 1. _Develop a new module of photo-oxidative stress._ Of primary interest to coral biologists and ecologists is symbiosis dysfunction under environmental stress, resulting in coral “bleaching”--the loss of algal symbionts from the association [@Jokiel:1977p7353]. Bleaching is thought to be triggered by photo-oxidative stress in *Symbiodinium* [@Weis:2008p944], which has been modeled previously as a response to absolute external irradiance [@Eynaud:2011tv]. However, this response may also depend on self-shading by other symbionts [@Enriquez:2005p142], CO~2~ availability at the site of photosynthesis [@Wooldridge:2009p7807], and other non-photochemical quenching mechanisms [@Roth:2014wf]. We incorporate these features into a new photo-oxidative stress module linking overreduction of the photosynthetic light reactions to downstream impacts of photoinhibition and photodamage. Importantly, this formulation introduces a link between CO~2~-limitation of photosynthesis and bleaching, and potential synergistic roles for heterotrophy and nutrient availability in influencing bleaching responses [@Wooldridge:2014hc]
 
-2. _Reduce theoretical and mathematical complexity._ Following the logic of @Jager:2013bj, we exclude certain features of formal DEB theory in order to capture behaviors of interest with the simplest possible formulation. Here, we present a model without reserves, maturity, or reproduction [see @Kooijman:2010vd]. This formulation precludes modeling the full life cycle of corals as reproduction, larval stages, and metamorphosis are not considered, but greatly reduces theoretical complexity and parameter numbers, which is advantageous given the relative paucity of data for corals. Moreover, dynamics of the symbiosis (i.e., changes in symbiont to host biomass, including bleaching and recovery) and coral biomass growth are efficiently captured with this simpler formulation, which also increases accessibility for biologists and ecologists without requiring significant expertise in DEB theory.
+2. _Reduce theoretical and mathematical complexity._ Following the logic of @Jager:2013bj, we exclude certain features of formal DEB theory in order to capture behaviors of interest with the simplest possible formulation. Here, we present a model without reserves, maturity, or reproduction [see @Kooijman:2010vd]. This formulation precludes modeling the full life cycle of corals as reproduction, larval stages, and metamorphosis are not considered, but greatly reduces theoretical complexity and parameter numbers, which is advantageous given the relative paucity of data for corals. Moreover, dynamics of the symbiosis (i.e., changes in symbiont to host biomass, including bleaching and recovery) and coral biomass growth are efficiently captured with this simpler formulation, which also increases accessibility for biologists and ecologists without requiring expertise in DEB theory.
 
-3. _Provide well-documented, open-access code._ In order to facilitate the continued development and application of theoretical modeling tools for coral symbioses, we provide open access to the model in the form of detailed, commented code written in the R language [@RALanguageandEn:2014wf]. With an accessible and modular framework, we envision this model as a resource for further development by the scientific community to include additional complexity and problem-specific components. We chose the R language, which is freely available and in common use by biologists and ecologists, to reach the widest possible audience with this work.
+3. _Provide well-documented, open source code._ In order to facilitate the continued development and application of theoretical modeling tools for coral symbioses, we provide open access to the model in the form of detailed, commented code written in the R language [@RALanguageandEn:2014wf]. With an accessible and modular framework, we envision this model as a resource for further development by the scientific community to include additional complexity and problem-specific components. We chose R, an open source programming language in common use by biologists and ecologists, to reach the widest possible audience with this work.
 
 With these as our primary motivations, we describe a simplified approach to bioenergetic modeling of coral-*Symbiodinium* symbioses that dynamically integrates the influences of external irradiance, nutrients, and prey availability on coral growth and symbiosis dynamics (i.e., changes in symbiont:host biomass ratios), allowing for the possibility of coral bleaching in response to photooxidative stress. An emergent finding of this work is that coral bleaching can be interpreted as an alternate stable state of the symbiotic system, which provides a new framework for understanding the mechanisms that drive a coral into a bleached state, as well as those that facilitate recovery. In the following sections, we describe and provide rationale for the model structure, demonstrate a range of steady state and dynamic behaviors that are consistent with observed phenomena, and discuss new insights from this work in understanding responses of coral-*Symbiodinium* symbioses to environmental change.
 
 # Model description
 In this dynamical system, both the coral host and algal symbiont acquire and use carbon and nitrogen to construct biomass. The symbiont fixes carbon through photosynthesis and receives nitrogen shared by the host, while the host acquires nitrogen from the environment and receives carbon shared by the symbiont. A graphical representation of the model is presented in Fig. 1, and each model flux and parameter is defined in Tables 1 and 2, respectively. We use C-moles (C-mol) as the unit of biomass for consistency with the rigorous mass balance of DEB theory: 1 C-mol is equivalent to the amount of biomass containing 1 mole of carbon atoms. Host biomass (expressed as C-mol H), symbiont biomass (expressed as C-mol S), and prey biomass (expressed as C-mol X) have fixed, but different, molar N:C ratios (Table 2). Biomass is produced from carbon and nitrogen by synthesizing units (SU), which are mathematical specifications of the formation of a product from two substrates; we use the "parallel complementary" formulation of @Kooijman:2010vd (page 105, Fig. 3.7) to specify these fluxes. The two state variables of this system are symbiont biomass and coral biomass; because resources are acquired proportionally to surface area, and surface area is proportional to volume, biomass increases exponentially during growth (indeed, corals grow exponentially [@Bak:1976bv]). 
 
-Environmental stress is implemented in the form of photooxidative stress, which is thought to be a primary trigger of coral bleaching [@Lesser:1997p3587; @Weis:2008p944; @Wooldridge:2009p7807]. To simulate bleaching, we model the absorption and quenching of light energy by photochemistry and non-photochemical quenching, and the responses that occur (i.e., photoinhibition, photodamage, and symbiont loss) when these quenching capacities are overwhelmed. While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur concurrently with high temperature [@HoeghGuldberg:1999p4222]. Thus, it is important to justify our consideration of light as the primary stressor. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of photo-oxidative stress is excess excitation energy, but the upstream events that lead to this situation may be diverse: indeed, elevated temperature may inhibit Rubisco functioning [@Jones:1998p3572] and the repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light stresses the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model to maintain a desired level of simplicity, while still allowing photooxidative stress and bleaching to be simulated with biological realism in response to light.  
+Environmental stress is implemented in the form of photooxidative stress, which is thought to be a primary trigger of coral bleaching [@Lesser:1997p3587; @Weis:2008p944; @Wooldridge:2009p7807]. To simulate bleaching, we model the absorption and quenching of light energy by photochemistry and non-photochemical quenching, and the responses that occur (i.e., photoinhibition, photodamage, and symbiont loss) when these quenching capacities are overwhelmed. While bleaching in response to high light alone has been observed experimentally [@Schutter:2011ie; @Downs:2013kc], mass coral bleaching events occur concurrently with high temperature [@HoeghGuldberg:1999p4222]. Thus, it is important to justify our consideration of light as the primary stressor. In reality, light and temperature interact synergistically [@Coles:1978p1124; @Jones:1998p3572], and in fact, any stressor that disrupts the quenching of light energy may lead to bleaching [@Wooldridge:2010p7809; @Baker:2015kp]. This is because the proximate cause of photo-oxidative stress is excess excitation energy, but the upstream events that lead to this situation may be diverse. Indeed, elevated temperature may inhibit Rubisco functioning [@Jones:1998p3572] and the repair of the D1 protein in photosystem II [@Warner:1999p4239], which reduces the capacity of photochemical quenching and leads to an excess of light energy. In this way, elevated temperature serves to reduce the threshold above which light stresses the system [@HoeghGuldberg:1999p4222]; importantly, light is still the proximate stressor. Therefore, we omitted temperature from the model to maintain a desired level of simplicity, while still allowing photooxidative stress and bleaching to be simulated with biological realism in response to light.  
 
 Table 1. Model fluxes (mass-specific). Units are explained in the text.
 
@@ -136,7 +136,9 @@ Coral biomass formation is then specified by a parallel complementary SU (formul
 
 \begin{equation} j_{HG} = \bigg({1 \over j_{HGm}} + {1 \over {y_{C}\rho_C{S \over H} + j_X}} + {1 \over {(j_N + n_{NX}j_X + r_{NH}) / n_{NH}}} - {1 \over {y_{C}{\rho_C{S \over H} + j_X} + (j_N + n_{NX}j_X + r_{NH}) / n_{NH}}}\bigg)^{-1} \end{equation}
 
-where $\rho_C$ is fixed carbon shared by the symbiont (see Eq. 21), and $r_{NH}$ is recycled nitrogen liberated by host biomass turnover (see Eq. 7). The parameter $y_C$ specifies the yield of biomass from organic carbon, which we take to be 0.8 for redox balance (see @Muller:2009io). Host biomass turnover is equal to the specific maintenance rate of host biomass,
+where $\rho_C$ is fixed carbon shared by the symbiont (see Eq. 21), and $r_{NH}$ is recycled nitrogen liberated by host biomass turnover (see Eq. 7). The parameter $y_C$ specifies the yield of biomass from organic carbon, which we take to be 0.8 to satisfy redox balance (see @Muller:2009io). 
+
+Host biomass turnover is equal to the specific maintenance rate of host biomass,
 
 \begin{equation} j_{HT}=j_{HT}^0 \end{equation}
 
@@ -154,7 +156,7 @@ Due to the inherent inefficiency of the parallel complementary SU formulation, t
 
 \begin{equation} j_{eC} = (j_X + \rho_C{S \over H} - j_{HG}y_{C}^{-1})_+ \end{equation}
 
-This flux, $j_{eC}$, is assumed to be available to the host as a respiratory substrate to support various energetically-demanding processes; of particular importance is the host's active carbon concentrating mechanisms (CCMs) that supply CO~2~ for symbiont photosynthesis [@Wooldridge:2013tj; @Hopkinson:2015ev]. We therefore specify $j_{CO_2}$ as the host-mediated delivery of CO~2~ to photosynthesis that encompasses potentially diverse carbon-concentrating mechanisms (CCMs), including active transport of bicarbonate, carbonic anhydrase-catalyzed conversion of bicarbonate to CO~2~ to promote diffusion toward the symbiont [@Tansik:2015cm], and acidification of the symbiosome to increase localized CO~2~ concentrations around the symbiont [@Barott:2014gx]. Since these active CCMs require energetic input by the host, we define $j_{CO_2}$ as proportional to $j_{eC}$, assuming that some of this carbon is respired to energize the CCMs. This formulation means that the symbiont indirectly ensures its own CO~2~ supply by providing fixed carbon (=energy) to the host [@Wooldridge:2013tj]. The parameter $k_{CO_2}$ scales the efficacy of host CCMs, which enables the comparison of different rates of CO~2~ delivery that may characterize different coral species [@Wooldridge:2014di]. The active input of CO~2~ to the photosynthesis SU is therefore specified as:
+This flux, $j_{eC}$, is assumed to be available to the host as a respiratory substrate to support energetically-demanding processes; of particular importance is the host's active carbon concentrating mechanisms (CCMs) that supply CO~2~ for symbiont photosynthesis [@Wooldridge:2013tj; @Hopkinson:2015ev]. We therefore specify $j_{CO_2}$ as the host-mediated delivery of CO~2~ to photosynthesis that encompasses potentially diverse carbon-concentrating mechanisms (CCMs), including active transport of bicarbonate, carbonic anhydrase-catalyzed conversion of bicarbonate to CO~2~ to promote diffusion toward the symbiont [@Tansik:2015cm], and acidification of the symbiosome to increase localized CO~2~ concentrations around the symbiont [@Barott:2014gx]. Since these active CCMs require energetic input by the host, we define $j_{CO_2}$ as proportional to $j_{eC}$, assuming that some of this carbon is respired to energize the CCMs. This formulation means that the symbiont indirectly ensures its own CO~2~ supply by providing fixed carbon (=energy) to the host [@Wooldridge:2013tj]. The parameter $k_{CO_2}$ scales the efficacy of host CCMs, which enables the comparison of different rates of CO~2~ delivery that may characterize different coral species [@Wooldridge:2014di]. The active input of CO~2~ to the photosynthesis SU is therefore specified as:
 
 \begin{equation} j_{CO_2} = k_{CO_2}j_{eC} \end{equation}
 
@@ -238,7 +240,7 @@ In a constant environment, the system ultimately reaches a steady state of expon
 
 To analyze positive-growth steady state behavior, we ran the model to steady state across gradients of external irradiance and nutrients (Fig. 3), which revealed patterns consistent with observed phenomena in corals. Predicted growth rates are low at low light and DIN (~0.01 d^-1^), and begin increasing as both of these factors increase (Fig. 3A). Low light limits photosynthetic rates, resulting in less fixed carbon shared with the host and an associated increase in the symbiont to host biomass ratio (Fig. 3B). In agreement with this trend are many observations of negative correlation between irradiance and symbiont density [@Stimson:1997p3837; @Brown:1999p3534; @Fitt:2000p3792; @Titlyanov:2001p3631]. As higher light alleviates light-limitation of photosynthesis, host growth becomes less carbon-limited.
 
-![Steady state values of (A) specific growth (C-mol H C-mol H^-1^ d^-1^) and (B) the symbiont to host biomass ratio (C-mol S C-mol H^-1^) across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run to steady state with all parameters at default values and prey density set to zero. Negative steady state growth rates, and corresponding S:H ratios, were set to zero.](../img/Fig3.png)
+![Steady state values of (A) specific growth (C-mol H C-mol H^-1^ d^-1^) and (B) the symbiont to host biomass ratio (C-mol S C-mol H^-1^) across gradients of external irradiance and dissolved inorganic nitrogen. Note that typical conditions for reefs are ~1e-7 M DIN and 10-20 mol photons m^-2^ d^-1^. Simulations for each combination of light and nutrients (41 points along each axis) were run to steady state with all parameters at default values and prey density set to zero. Negative steady state growth rates and corresponding S:H ratios were set to zero, and a ceiling of 0.5 was imposed on S:H ratios to aid in visualization.](../img/Fig3.png)
 
 Similarly, increasing DIN alleviates nitrogen-limitation (Fig. 3A). Increased growth at higher DIN is predicted by the DEB model of @Muller:2009io, and has also been observed experimentally [@MullerParker:1994uo; @Tanaka:2007uv; @Tanaka:2013dj]. However, DIN elevation beyond a certain point (e.g., ~3-4 µM in these simulations) has little effect on growth as carbon becomes limiting. Although very high nutrient levels may reduce growth in nature [@Shantz:2015dz], these impacts are not likely to occur within the range of concentrations considered here (<4 µM) [@FerrierPages:2000p1950]. In addition to increasing growth, DIN also increases the symbiont to host biomass ratio (Fig. 3B), a phenomenon also observed in reef corals [@Marubini:1996p8460]. At low DIN and intermediate light, more typical of coral reef environments, symbiont to host biomass ratios are around ~0.06-0.21, which is consistent with values reported in the literature [@Muscatine:1981jy; @Edmunds:2011bv; @Hawkins:2016jj].
 
@@ -251,21 +253,21 @@ The incorporation of photooxidative stress in the model sets an upper limit to t
 
 # Sensitivity analysis
 
-The values used for each parameter in the model (Table 2) are derived from relevant literature; these derivations are described in the Supplementary Information. Here we evaluate the sensitivity of the model to changes in these parameter values, which also serves to demonstrate the behavior of the dynamical system. We calculated fractional change in steady state values in response to fractional changes in parameter values, relative to their default values, under environmental conditions typical of coral reefs.
+The values used for each parameter in the model (Table 2) are derived from relevant literature (see Supplementary Information). Here we evaluate the sensitivity of the model to changes in these parameter values, which also serves to demonstrate the behavior of the dynamical system. We calculated fractional change in steady state values in response to fractional changes in parameter values, relative to their default values, under environmental conditions typical of coral reefs.
 
 ![Sensitivity analysis. Plots show the fractional change in steady state values of growth (solid lines) and S:H biomass (dashed lines) in response to fractional changes in default parameter values (see Table 2 for default values). Parameters are grouped by the processes in which they are involved. This sensitivity analysis was conducted at conditions typical for coral reef environments: low DIN (1e-7 M) and intermediate light (15 mol photons m^-2^ d^-2^), with prey density set to zero. Sensitivity analyses conducted other environmental conditions are presented in Figs S3-S7.](../img/Fig4.png)
 
-Overall, relative changes in the steady state of the system are less than the equivalent relative change in parameter value. However, changes in certain parameter values have more significant impacts: increasing $j_{Nm}$ or decreasing $K_N$ both dramatically increase host growth (Fig. 4), demonstrating the strong nitrogen-limitation that characterizes these symbioses. The parameter $\bar{a}^*$ has a strong impact on S:H biomass ratios (Fig. 4) since this parameter determines the amount of light absorbed by symbionts, with lower values increasing light-limitation. Increasing the maximum growth and turnover rates have the expected effects of increasing and decreasing growth, respectively. Parameters relating to photooxidative stress and bleaching have little impact under these environmental conditions (Fig. 4), but have larger impacts under higher light (e.g., Fig. S6). Sensitivity analyses conducted under different combinations of external light and nutrients are presented in Figs. S3-S7.
+Overall, relative changes in the steady state of the system are less than the equivalent relative change in parameter value. However, changes in certain parameter values have more significant impacts: increasing $j_{Nm}$ or decreasing $K_N$ both dramatically increase host growth (Fig. 4), demonstrating the strong nitrogen-limitation that characterizes these symbioses. The parameter $\bar{a}^*$ has a strong impact on S:H biomass ratios (Fig. 4) since this parameter determines the amount of light absorbed by symbionts, with lower values increasing light-limitation. Increasing the maximum growth and turnover rates have the expected effects of increasing and decreasing growth, respectively. Parameters relating to photooxidative stress and bleaching have little impact under low nutrients and intermediate light (Fig. 4), but have larger impacts under higher light (e.g., Fig. S6). Sensitivity analyses conducted under different combinations of external light and nutrients are presented in Figs. S3-S7.
 
 # Dynamic behavior
 The dynamic behavior of the model demonstrates its power to integrate multiple environmental forcings simultaneously. Here we present several scenarios that demonstrate the model's ability to reproduce complex phenomena that have been observed in corals.
 
 ## Seasonal variability
-Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [@Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 5), and also provides the mechanism: as increasing light in summer decreases carbon fixation due to photooxidative stress, symbionts grow slower than the host, leading to decreasing S:H ratios. Under nutrient enrichment, this effect is more pronounced, as CO~2~-limitation (due to higher symbiont standing stocks) causes mild bleaching that results in a similar summertime minimum S:H as the ambient nutrient case ('physiological bleaching' *sensu* @Fitt:2001p832). Decreasing light into winter then alleviates the photooxidative stress constraints on carbon fixation, such that nitrogen constrains the S:H ratio, explaining why S:H increases more when DIN is enriched (Fig. S8).
+Symbiont densities and coral growth rates are known to vary seasonally, representing an integrated response to changes in a suite of environmental factors. Light in particular is a strong driver of these trends [@Stimson:1997p3837; @Brown:1999p3534; @Fagoonee:1999p4136; @Fitt:2000p3792], with high light associated with lower symbiont abundance and reduced tissue biomass. The role of light in driving seasonal changes in symbiont density was demonstrated nicely by @Stimson:1997p3837, who also found that experimental nutrient-enrichment amplified the light-driven seasonal oscillation. Using the levels of light and nutrients from this study as inputs, the model reproduces this observed interaction among environmental factors (Fig. 5), and also provides the mechanism: increasing light in summer decreases symbiont growth rates due to photooxidative stress, leading to decreasing S:H ratios. Under nutrient enrichment, this effect is more pronounced, as CO~2~-limitation of photosynthesis (due to higher symbiont standing stocks) causes mild bleaching that results in a similar summertime minimum S:H as the ambient nutrient case ('physiological bleaching' *sensu* @Fitt:2001p832). Decreasing light into winter then alleviates the photooxidative stress constraints on carbon fixation such that nitrogen-limitation constrains the S:H ratio, explaining why S:H increases more when DIN is enriched (Fig. S8).
 
 ![Light-driven seasonal dynamics of symbiont abundance and coral growth. Light input (upper panel) was designed as a sinusoidal curve with a period of one year, with maximum and minimum values of 44 and 20 mol photons m^-2^ d^-1^, corresponding to those measured by @Stimson:1997p3837. The dynamic behavior of symbiont to host biomass ratio (middle panel) and the specific growth rate of host biomass (lower panel) show seasonal oscillations that are greater in magnitude under high nutrients (15.14 $\mu$M N; dashed lines) relative to low nutrients (0.14 $\mu$M N; solid lines), consistent with the findings of @Stimson:1997p3837. Prey density was set at 1e-6 CmolX L^-1^.](../img/Fig5.png)
 
-The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer[^4], consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone may drive seasonal dynamics in the ways discussed[^5], temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the power of this model to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
+The prediction of higher growth when light is reduced indicates that growth is not limited by low light in winter, but is actually reduced by excess light in summer[^4], consistent with the experimental findings of @Schutter:2011ie. Seasonal summertime reductions in tissue biomass have also been well-documented in the field [@Fitt:2000p3792], along with reductions in net photosynthetic capacity [@MullerParker:1987cr]. Importantly, while light alone may drive seasonal dynamics in the ways discussed[^5], temperature fluctuations may attenuate or even reverse the effect of light as cooler winters depress metabolism; thus, the relative magnitude of fluctuation in temperature, light, and other factors may produce wide variability in the direction and magnitude of seasonal changes in growth and symbiont abundance, depending on location and microhabitat. Nevertheless, the seasonal variability predicted here (Fig. 5) is consistent with experimental and field observations for corals, and demonstrates the model's ability to predict dynamic behavior that mechanistically integrates multiple environmental drivers.
 
 [^4]: at the light levels indicated in @Stimson:1997p3837. Note that if light levels were reduced throughout the year (e.g. for a coral at greater depth) such that light did not cause photo-oxidative stress in summer but became limiting to photosynthesis in winter, the S:H ratio would still increase in winter, but growth would decrease; the latter scenario is predicted both by the present model as well as that of @Muller:2009io, since photo-oxidative stress does not become relevant.
 [^5]: See footnote 4.
@@ -291,12 +293,12 @@ Whether this 'overshoot' occurs or not is determined by the relative availabilit
 
 ![Recovery from bleaching with varying N:C availability (A: N:C=0.100; B: N:C=0.175; C: N:C=0.220). Higher N:C ratios in a heterotrophic food source (effectively representing higher external DIN and/or lower feeding rates) cause a larger overshoot in the S:H biomass ratio, and prolong the duration of time until the system 'recovers' by re-establishing nitrogen-limitation. Substrate limitation coefficients were calculated using Eq. 23. All simulations were run with default parameters (except varying $n_{NX}$), with L=20 mol photons m^2^ d^-1^, DIN=1e-7 mol N L^-1^, prey=1e-7 CmolX L^-1^, and initial S:H biomass=0.001.](../img/Fig8.png)
 
-These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the C-limited state may still persist (e.g. Fig. 8B, 8C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts, possibly for months to years [@Levitan:2014et, @Hughes:2013hd]). Therefore, host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. The model predicts that acquisition of carbon from other sources, such as direct uptake of DOC [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
+These dynamics reveal that the re-establishment of nitrogen-limitation is the most important diagnostic of recovery to a 'healthy' state, as this is when positive growth rates are resumed. A high S:H biomass ratio alone does not necessarily indicate that a 'healthy' state has been reached, since the carbon-limited state may still persist (e.g. Fig. 8B, 8C). This could explain why corals that have recovered their symbiont populations after bleaching may still exhibit energetic deficits and physiological impacts, possibly for months to years [@Levitan:2014et, @Hughes:2013hd]). These findings suggest that host acquisition of carbon from a source other than the symbiont may be extremely important for the system to recover from bleaching. Indeed, host feeding has been shown to promote a more rapid return to pre-bleaching levels of key physiological parameters in recovering corals [@Connolly:2012ep]. Additional carbon sources for the host, such as direct uptake of dissolved organic carbon [@Levas:2015ic], may also promote more rapid recovery from a bleached state.
 
 # Conclusions
 This dynamic bioenergetic model of coral-*Symbiodinium* symbioses mechanistically reproduces patterns in steady-state coral growth and symbiont abundance commonly observed in corals, including higher symbiont abundance with higher nutrients and feeding, lower symbiont abundance with increasing light, and optimal growth at intermediate light levels. Moreover, the model reproduces complex dynamic behaviors including seasonal changes in symbiont density at different nutrient levels, rapid bleaching above a threshold of high light, mitigation of bleaching by heterotrophic feeding, exacerbation of bleaching by elevated nutrients, and an overshoot of symbiont density during recovery from bleaching. These examples demonstrate the model's ability to integrate multiple environmental forcing functions to reproduce complex responses; meanwhile, the diversity of these phenomena suggest the model has captured many of the important features of the system in a unifying mechanistic framework. This model also provides a new conceptual framework for considering coral bleaching as a transition to an alternate stable state, which has important implications for understanding the performance and maintenance of symbiotic interactions. In this context, the 'healthy' stable state represents a scenario in which nitrogen-limitation stabilizes the symbiont to host biomass ratio and maintains positive growth. Conversely, carbon-limitation represents a dysfunctional state wherein positive feedbacks result in a loss of photosynthetic capacity and negative growth. Importantly, these 'control' mechanisms arise entirely passively through feedbacks present in the system.
 
-In addition to the suite of specific examples presented here, the model can be used to explore many different dynamic environmental scenarios, and represents a tool that biologists and ecologists can use to generate hypotheses and make predictions in both experimental and natural settings. Moreover, parameter values can be modified to correspond to different genetic or functional types of coral hosts and *Symbiodinium* partners in order to evaluate variability in system responses. Thus, the diversity of potential applications for this model is high, and we envision this work as a foundation for continued development, which may include more detailed treatments of specific modules (e.g., DIC processing), and the incorporation of more external forcing capabilities (e.g., external DIC, temperature). Importantly, this effort may be undertaken by the scientific community at large, including those with theoretical and empirical backgrounds, which is why the code for this model has been developed openly using the R language. Ultimately, the continued refinement of these tools is fundamental in elucidating the mechanisms of symbiosis function and dysfunction, and in predicting coral responses to environmental change.
+In addition to the suite of specific examples presented here, the model can be used to explore many different dynamic environmental scenarios, and represents a tool that biologists and ecologists can use to generate hypotheses and make predictions in both experimental and natural settings. Moreover, parameter values can be modified to correspond to different genetic or functional types of coral hosts and *Symbiodinium* partners in order to evaluate variability in system responses. Thus, the diversity of potential applications for this model is high, and we envision this work as a foundation for continued development, which may include more detailed treatments of specific modules (e.g., DIC processing), and the incorporation of more external forcing capabilities (e.g., external DIC, temperature). Importantly, open source R code allows this effort to benefit from contributions from the wider scientific community, including those with empirical and theoretical backgrounds. Ultimately, the continued refinement of these tools is fundamental in elucidating the mechanisms of symbiosis function and dysfunction, and in predicting coral responses to environmental change.
 
 References {#references .unnumbered}
 ==========
